--- a/styles/main.css
+++ b/styles/main.css
@@ -1,8 +1,82 @@
-body {
-  background-color: pink; }
-
 h1 {
   text-align: center;
   color: purple; }
 
-/*# sourceMappingURL=main.css.map */
+#logo {
+    height: auto;
+    width: auto;
+    max-width: 100px;
+    max-height: 100px;
+}
+
+.jumbotron {
+  opacity: .75;
+  background: ##FFFF99;
+  color: #e49a07;
+}
+
+.randbg {
+  background: url('/imgs/parks/olympic.jpg') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+.randbg.bg1 {
+  background-image: url('/imgs/parks/arches.jpg');
+}
+
+.randbg.bg2 {
+  background-image: url('../imgs/parks/bryceCanyon.jpg');
+}
+
+.randbg.bg3 {
+  background-image: url('../imgs/parks/paintpot.jpg');
+}
+
+.randbg.bg4 {
+  background-image: url('../imgs/parks/sanddunes.jpg');
+}
+
+.randbg.bg5 {
+  background-image: url('../imgs/parks/twomedicine.jpg');
+}
+
+.randbg.bg6 {
+  background-image: url('../imgs/parks/yellowstone.jpg');
+}
+
+.randbg.bg7 {
+  background-image: url('../imgs/parks/panoramapoint.jpg');
+}
+
+.randbg.bg8 {
+  background-image: url('../imgs/parks/olympic.jpg');
+}
+
+.brownBar {
+  background-color: #553D0D;
+  width:100%;
+  height:150px;
+  position: absolute;
+  bottom:0;
+  left:0;
+  opacity: .75;
+}
+
+.motto {
+  font-size: 2.0em;
+  color: #FFFF99;
+  float: right;
+  padding-right: 2.7em
+}
+
+.ontop {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  float: right;
+  z-index: 10;
+  margin: 3em;
+}
