got browse page functional

--- a/templates/memberProfiles.hbs
+++ b/templates/memberProfiles.hbs
@@ -1,10 +1,7 @@
-<div>
-{{#each newMember}}
+{{#each newMembers}}
 	<img src={{ imageSrc }}>
 	<h3>{{ firstName }} {{ lastName  }}</h3>
 	<div>I'm looking to meet a {{ lookingFor }} near {{ park }}</div>
-	<div>My Interests
-	  <div>{{ interests }}</div>
-	</div>
+	<div>My Interests</div>
+	<div>-{{ interests }}</div>
 {{/each}}
-</div>
