added CSS link to browse.html and cleaned up some code

--- a/templates/memberProfiles.hbs
+++ b/templates/memberProfiles.hbs
@@ -1,7 +1,7 @@
 {{#each newMembers}}
-	<img src={{ imageSrc }}>
+	<img src={{ imageSrc }} style="height: 150px; width 150px;">
 	<h3>{{ firstName }} {{ lastName  }}</h3>
-	<div>I'm looking to meet a {{ lookingFor }} near {{ park }}</div>
+	<div>I'm looking to meet a <b>{{ lookingFor }}</b> near <b>{{ park }}</b></div>
 	<div>My Interests</div>
 	<div>-{{ interests }}</div>
 {{/each}}
