browse page added, signup fixed, hold onto your butts

--- a/styles/main.css
+++ b/styles/main.css
@@ -119,3 +119,13 @@
   /*margin: 1em 4em 1em 15em;*/
   margin: .5% 10% .5% 10%;
 }
+
+/* --- to browse page ---*/
+
+#profileDisplay {
+  margin: .5% 10% .5% 10%;
+}
+
+/* --- ex to profile ---*/
+
+
