Semi working some more css

--- a/templates/memberProfiles.hbs
+++ b/templates/memberProfiles.hbs
@@ -1,5 +1,5 @@
 {{#each newMembers}}
-	<img src={{ imageSrc }}>
+<img  src={{ imageSrc }} style= "height: 100px; width: 100px;">
 	<h3>{{ firstName }} {{ lastName  }}</h3>
 	<div>I'm looking to meet a {{ lookingFor }} near {{ park }}</div>
 	<div>My Interests</div>
