--- a/styles/main.css
+++ b/styles/main.css
@@ -5,4 +5,8 @@ h1 {
   text-align: center;
   color: purple; }
 
+#userPic {
+  height: 50px;
+  width: 50px; }
+
 /*# sourceMappingURL=main.css.map */
